--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<header>
 			<nav>
 				<div>
-					<img src="./assets/images/logo.svg" alt="logo">
+					<img src="./assets/images/Logo.svg" alt="logo">
 					<ul>
 						<li class="active" >Home</li>
 						<li>About</li>
